# SagA

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  makefile
examples/: dump.hpp  earth_and_moon.cpp  solar_system.cpp  star_formation.cpp
include/saga/: all.hpp  particle.hpp  system_of_units.hpp  world.hpp
include/saga/core/: all.hpp  backend.hpp  container.hpp  fields.hpp  force.hpp  iterator.hpp  keywords.hpp  loops.hpp  properties.hpp  proxy.hpp  tuple.hpp  types.hpp  utils.hpp  vector.hpp  views.hpp
include/saga/core/cuda/: all.hpp  core.hpp  loops.hpp  vector.hpp
include/saga/cuda/: all.hpp  core.hpp  loops.hpp  physics.hpp
include/saga/physics/: all.hpp  charge.hpp  collisions.hpp  core.hpp  electromagnetic.hpp  force.hpp  gravity.hpp  interaction.hpp  loops.hpp  quantities.hpp  shape.hpp
scripts/: reproduce.py
test/cmake/: CMakeLists.txt  main.cpp
test/cpp/: test.cpp  test_containers.cpp  test_core.cpp  test_earth.cpp  test_solar_system.cpp  test_utils.hpp  test_world.cpp
test/cuda/: test_cuda_containers.cpp  test_cuda_main.cpp
test/include/: test_utils.hpp
